--- a/apps/site/src/assets/styles/theme.css
+++ b/apps/site/src/assets/styles/theme.css
@@ -217,11 +217,11 @@ h4 {
 }
 
 h5 {
-    @apply text-lg font-semibold;
+    @apply text-base font-semibold;
 }
 
 h6 {
-    @apply text-lg font-semibold;
+    @apply text-base font-semibold;
 }
 
 a {
