--- a/apps/site/src/components/widgets/Portfolio/Projects/Projects.astro
+++ b/apps/site/src/components/widgets/Portfolio/Projects/Projects.astro
@@ -1,23 +1,22 @@
 ---
 import { ProjectGallery } from '@common/ProjectsGallery';
-import ProjectCard from '@common/ProjectsGallery/ProjectCard/ProjectCard.astro';
 import { getAllProjects, type ProcessedProject } from '@lib/collections/projectHelpers';
 import { cn } from '@lib/utils';
 
 const projects = await getAllProjects();
 
-if (projects.length > 0) {
-    console.log(
-        'DEBUG: First project category structure:',
-        JSON.stringify(projects[0].data.category, null, 2)
-    );
-    if (projects[0].data.category?.platforms && projects[0].data.category.platforms.length > 0) {
-        console.log(
-            'DEBUG: First platform object:',
-            JSON.stringify(projects[0].data.category.platforms[0], null, 2)
-        );
-    }
-}
+// if (projects.length > 0) {
+//     console.log(
+//         'DEBUG: First project category structure:',
+//         JSON.stringify(projects[0].data.category, null, 2)
+//     );
+//     if (projects[0].data.category?.platforms && projects[0].data.category.platforms.length > 0) {
+//         console.log(
+//             'DEBUG: First platform object:',
+//             JSON.stringify(projects[0].data.category.platforms[0], null, 2)
+//         );
+//     }
+// }
 
 export interface Props {
     className?: string;
@@ -27,6 +26,5 @@ const { className } = Astro.props as Props;
 ---
 
 <section class={cn('w-full', className)}>
-    <!-- {projects.map((project: ProcessedProject) => <ProjectCard project={project} />)} -->
      <ProjectGallery client:only projects={projects}/>
 </section>
