feat: update typography colors to use 'tertiary' instead of 'accent'; add new tests page for design system components

--- a/apps/site/src/pages/index.astro
+++ b/apps/site/src/pages/index.astro
@@ -27,7 +27,7 @@ const meta: MetaSEO = {
                     <h2 class='sw-display text-primary pb-2'>
                         Sua história, nossa magia. 
                     </h2>
-                    <h3 class='sw-pulse from-primary to-accent'>
+                    <h3 class='sw-pulse from-primary to-tertiary'>
                        Trazemos suas ideias de apps, jogos e sites à vida.
                     </h3>
                 </header>
@@ -38,7 +38,7 @@ const meta: MetaSEO = {
             <div class='sw-container flex flex-col space-y-10 z-20'>
                 <header class='flex flex-col space-y-4'>
                     <h2 class='uppercase text-on-surface'>Nossos serviços</h2>
-                    <h3 class='sw-pulse from-primary to-accent'>Desenvolvemos ideias</h3>
+                    <h3 class='sw-pulse from-primary to-tertiary'>Desenvolvemos ideias</h3>
                 </header>
                 <Products />
             </div>
@@ -53,7 +53,7 @@ const meta: MetaSEO = {
                     <div class='flex flex-col space-y-4'>
                         <header class='flex flex-col space-y-2'>
                             <h2 class='uppercase text-on-surface'>Sobre nós</h2>
-                            <h3 class='sw-pulse from-primary to-accent'>
+                            <h3 class='sw-pulse from-primary to-tertiary'>
                                 ❤ Encantamos com tecnologia e criatividade
                             </h3>
                         </header>
@@ -82,7 +82,7 @@ const meta: MetaSEO = {
                 <div class='flex flex-col space-y-4'>
                     <header class='flex flex-col space-y-2'>
                         <h2 class='uppercase text-on-surface'>Quem somos</h2>
-                        <h3 class='sw-pulse from-primary to-accent'>Essa é a nossa tripulação</h3>
+                        <h3 class='sw-pulse from-primary to-tertiary'>Essa é a nossa tripulação</h3>
                     </header>
                     <Team />
                 </div>
@@ -100,7 +100,7 @@ const meta: MetaSEO = {
                 <div class='flex flex-col space-y-4'>
                     <header class='flex flex-col space-y-2'>
                         <h2 class='uppercase text-on-surface'>Entre em contato</h2>
-                        <h3 class='sw-pulse from-primary to-accent'>Queremos ouvir a sua história</h3>
+                        <h3 class='sw-pulse from-primary to-tertiary'>Queremos ouvir a sua história</h3>
                     </header>
                     <Contact />
                 </div>
