feat: update color variables and styles across components; add ColorBoxes and ShadcnComponentsPreview components

--- a/apps/site/src/components/widgets/Home/Contact/Contact.astro
+++ b/apps/site/src/components/widgets/Home/Contact/Contact.astro
@@ -32,11 +32,11 @@ const { className } = Astro.props as Props;
                             <!-- TODO -->
                             <!-- <Icon name='mdi:email' class='text-sw-secondary dark:text-sw-primary' /> -->
                         </div>
-                        <h4 class='spacewiz__text--accent block md:hidden'>Email</h4>
+                        <h4 class='spacewiz__text--tertiary block md:hidden'>Email</h4>
                     </div>
 
                     <div class='flex flex-col justify-center'>
-                        <h4 class='spacewiz__text--accent hidden md:block'>Email</h4>
+                        <h4 class='spacewiz__text--tertiary hidden md:block'>Email</h4>
                         <p>
                             Envie um email para o endereço <a href='mailto:contato@spacewiz.dev'>contato@spacewiz.dev</a
                             >.
@@ -50,11 +50,11 @@ const { className } = Astro.props as Props;
                             <!-- TODO -->
                             <!-- <Icon name='ph:phone-call-fill' class='text-sw-secondary dark:text-sw-primary' /> -->
                         </div>
-                        <h4 class='spacewiz__text--accent block md:hidden'>Telefone</h4>
+                        <h4 class='spacewiz__text--tertiary block md:hidden'>Telefone</h4>
                     </div>
 
                     <div class='flex flex-col justify-center'>
-                        <h4 class='spacewiz__text--accent hidden md:block'>Telefone</h4>
+                        <h4 class='spacewiz__text--tertiary hidden md:block'>Telefone</h4>
                         <p>
                             Envie uma mensagem por <a href='https://wa.me/5561993527377'>WhatsApp</a> ou <a
                                 href='https://t.me/dankonobre'>Telegram</a
@@ -69,11 +69,11 @@ const { className } = Astro.props as Props;
                             <!-- TODO -->
                             <!-- <Icon name='ion:share-social' class='text-sw-secondary dark:text-sw-primary' /> -->
                         </div>
-                        <h4 class='spacewiz__text--accent block md:hidden'>Redes Sociais</h4>
+                        <h4 class='spacewiz__text--tertiary block md:hidden'>Redes Sociais</h4>
                     </div>
 
                     <div class='flex flex-col justify-center'>
-                        <h4 class='spacewiz__text--accent hidden md:block'>Redes Sociais</h4>
+                        <h4 class='spacewiz__text--tertiary hidden md:block'>Redes Sociais</h4>
                         <p>
                             Faça parte do nosso <a href='https://discord.com/invite/4rAZ8HhuAh'>Discord</a> e nos siga no
                             <a href='https://www.instagram.com/spacewiz.dev/'>Instagram</a>.
