--- a/apps/site/src/components/widgets/Footer.astro
+++ b/apps/site/src/components/widgets/Footer.astro
@@ -3,7 +3,7 @@
 ---
 
 <footer
-    class='flex flex-col w-full pt-8 text-sm items-center bg-surface-dim text-on-surface shadow-2xl relative'
+    class='flex flex-col w-full pt-8 text-sm items-center bg-surface text-on-surface shadow-2xl relative'
     style='clip-path: polygon(0 0, calc(50% - 48px) 0, 50% 1.25rem, calc(50% + 48px) 0, 100% 0, 100% 100%, 0 100%);'
 >
     <div class='flex flex-row sw-container justify-between mt-4'>
@@ -35,7 +35,7 @@
             </ul>
         </div>
     </div>
-    <div class='flex flex-col w-full py-8 mt-8 items-center bg-inverse-surface text-inverse-on-surface'>
+    <div class='flex flex-col w-full py-8 mt-8 items-center bg-surface-dim text-on-surface'>
         <div class='sw-container text-center'>
             <p>© Space Wizard Studios - Todos os direitos reservados</p>
         </div>
