--- a/apps/site/src/components/widgets/Project/Hero/Hero.astro
+++ b/apps/site/src/components/widgets/Project/Hero/Hero.astro
@@ -1,35 +1,27 @@
 ---
-import { getImage } from 'astro:assets';
-import type { ImageMetadata } from 'astro';
-
 import { cn } from '@lib/utils';
 
 export interface Props {
-    mobileImagePath: ImageMetadata;
-    desktopImagePath: ImageMetadata;
+    mobileImagePath: string;
+    desktopImagePath: string;
     className?: string;
     imgClassName?: string;
+    altText?: string;
 }
 
-const { mobileImagePath, desktopImagePath, className, imgClassName } = Astro.props as Props;
-
-const mobileImage = await getImage({ src: mobileImagePath, format: 'webp', quality: 100 });
-const desktopImage = await getImage({ src: desktopImagePath, format: 'webp', quality: 100 });
-
+const { mobileImagePath, desktopImagePath, className, imgClassName, altText = 'Imagem do projeto' } = Astro.props as Props;
 ---
 <div class={cn(
         'flex flex-col relative w-full h-screen overflow-hidden pointer-events-none', 
         className )}>
     <picture>
-        <source media='(max-width: 767px)' srcset={mobileImage?.src} />
-        <source media='(min-width: 768px)' srcset={desktopImage?.src} />
+        <source media='(max-width: 767px)' srcset={mobileImagePath} />
+        <source media='(min-width: 768px)' srcset={desktopImagePath} />
         <img
-            src={desktopImage?.src}
-            width={desktopImage?.attributes.width}
-            height={desktopImage?.attributes.height}
-            alt='Banner da nossa mascote no espaço.'
-            class={cn('relative w-screen h-screen object-cover', imgClassName)}
+            src={desktopImagePath}
+            alt={altText}
             loading='eager'
+            class={cn('relative w-screen h-screen object-cover', imgClassName)}
         />
     </picture>
 </div>
