--- a/apps/site/src/pages/index.astro
+++ b/apps/site/src/pages/index.astro
@@ -89,11 +89,11 @@ const meta: MetaSEO = {
             </div>
         </section>
 
-        <section class='relative flex flex-col w-full bg-surface-bright'>
+        <div class='relative flex flex-col w-full bg-surface-bright'>
             <div class='sw-halftone relative bottom-0 w-full h-24 md:h-56 bg-surface-dim text-primary z-20' 
                 style="clip-path: polygon(100% 100%, 100% 0, 0 0);">
             </div>
-        </section>
+        </div>
             
         <section class='relative flex flex-col w-full pb-12 z-20 bg-surface-bright'>
             <div class='sw-container flex flex-col space-y-10'>
