--- a/apps/site/src/assets/styles/theme.css
+++ b/apps/site/src/assets/styles/theme.css
@@ -251,7 +251,7 @@ This palette was studied with the help of tints.dev
     }
 
     ul {
-        @apply mr-4 list-disc pl-8;
+        @apply mr-4 list-disc space-y-2 pl-8;
 
         li {
             @apply text-base font-normal;
