--- a/apps/site/src/components/widgets/Footer.astro
+++ b/apps/site/src/components/widgets/Footer.astro
@@ -2,10 +2,12 @@
 
 ---
 
-<footer
-    class='flex flex-col w-full pt-8 text-sm items-center bg-surface text-on-surface shadow-2xl relative'
+
+
+<footer class='relative flex flex-col w-full pt-8 text-sm items-center bg-surface text-on-surface shadow-2xl'>
+    <div class="absolute -top-6 h-8 z-10 flex flex-col w-full text-sm items-center bg-surface text-on-surface"
     style='clip-path: polygon(0 0, calc(50% - 48px) 0, 50% 1.25rem, calc(50% + 48px) 0, 100% 0, 100% 100%, 0 100%);'
->
+    ></div>
     <div class='flex flex-row sw-container justify-between mt-4'>
         <div class='flex-col space-y-4'>
             <h5 class='uppercase font-bold'>Portfolio</h5>
