--- a/apps/site/src/layouts/BaseLayout.astro
+++ b/apps/site/src/layouts/BaseLayout.astro
@@ -12,8 +12,8 @@ import type { MetaSEO } from 'types/metaSEO';
 // import { config } from '@config.js';
 
 import '@styles/theme.css';
-import Footer from '@widgets/Footer.astro';
-import Header from '@widgets/Header.astro';
+import Footer from '@common/Footer/Footer.astro';
+import Header from '@common/Header/Header.astro';
 
 type Props = {
     meta?: MetaSEO;
