--- a/apps/site/src/pages/index.astro
+++ b/apps/site/src/pages/index.astro
@@ -21,7 +21,7 @@ const meta: MetaSEO = {
     <Hero />
     <div class='relative flex flex-col bg-surface-bright z-10'>
 
-        <section class='flex flex-col w-full md:sticky top-0 py-24'>
+        <section class='flex flex-col w-full md:sticky top-0 pt-12 md:py-24'>
             <div class='sw-container flex flex-col space-y-10 z-10'>
                 <header class='text-center md:text-right'>
                     <h2 class='sw-display text-primary pb-2'>
