--- a/apps/site/src/components/widgets/Error404.astro
+++ b/apps/site/src/components/widgets/Error404.astro
@@ -1,32 +1,17 @@
-<section class="flex items-center h-full p-16">
-	<div class="container flex flex-col items-center justify-center px-5 mx-auto my-8">
-		<div class="max-w-md text-center">
-			<h2 class="mb-8 font-bold text-9xl">
-				<span class="sr-only">Erro</span>
-				<span class="text-gradient bg-gradient-to-t from-sw-navy-700 to-sw-flamingo">404</span>
-			</h2>
-			<p class="text-3xl font-semibold md:text-3xl">Ops!</p>
-			<p class="mt-4 mb-8 text-lg text-sw-coal-400 dark:text-sw-coal-100">
-				Não conseguimos encontrar nada para mostrar aqui.
-			</p>
-			<a
-				rel="noopener noreferrer"
-				href="/"
-				class="inline-flex items-center p-3 rounded-md bg-sw-navy dark:bg-sw-flamingo ml-4 text-sw-secondary dark:text-sw-primary"
-			>
-				<svg
-					class="mr-2 w-6 h-6"
-					xmlns="http://www.w3.org/2000/svg"
-					preserveAspectRatio="xMidYMid meet"
-					viewBox="0 0 24 24"
-				>
-					<path
-						fill="currentColor"
-						d="M10 19v-5h4v5c0 .55.45 1 1 1h3c.55 0 1-.45 1-1v-7h1.7c.46 0 .68-.57.33-.87L12.67 3.6c-.38-.34-.96-.34-1.34 0l-8.36 7.53c-.34.3-.13.87.33.87H5v7c0 .55.45 1 1 1h3c.55 0 1-.45 1-1z"
-					></path>
-				</svg>
-				Voltar ao início
-			</a>
-		</div>
-	</div>
+<section class='flex items-center h-full p-16'>
+    <div class='container flex flex-col items-center justify-center px-5 mx-auto my-8'>
+        <div class='max-w-md text-center'>
+            <h2 class='mb-8 font-bold text-9xl'>
+                <span class='sr-only'>Erro</span>
+                <span class='text-gradient sw-pulse from-primary to-tertiary'>404</span>
+            </h2>
+            <p class='text-3xl font-semibold md:text-3xl'>Ops!</p>
+            <p class='mt-4 mb-8 text-lg text-sw-coal-400 dark:text-sw-coal-100'>
+                Não conseguimos encontrar nada para mostrar aqui.
+            </p>
+            <a rel='noopener noreferrer' href='/' class='inline-flex items-center text-on-surface'>
+                Voltar ao início
+            </a>
+        </div>
+    </div>
 </section>
