fix: change image class from relative to fixed for better layout in Hero component

--- a/apps/site/src/components/widgets/Home/Hero/Hero.astro
+++ b/apps/site/src/components/widgets/Home/Hero/Hero.astro
@@ -19,7 +19,7 @@ const { className } = Astro.props as Props;
             src={heroImageDesktop.src}
             alt='Banner da nossa mascote no espaço.'
             loading='eager'
-            class={cn('relative w-screen h-screen object-cover')}
+            class={cn('fixed w-screen h-screen object-cover')}
         />
     </picture>
     <DividerWave class='absolute w-full bottom-0 text-surface-bright' />
