--- a/apps/site/src/pages/index.astro
+++ b/apps/site/src/pages/index.astro
@@ -76,10 +76,10 @@ const meta: MetaSEO = {
                             sparkleCount={10}
                             explosionCount={20}
                             explosionRadius={200}
-                            
                             buttonClassName='w-32 h-32'
                             defaultColorClass='text-on-surface'
                             magicColorClass='text-primary'
+                            sparkleColorClass='text-sw-gold'
                             client:idle
                         />
                     </figure>
