--- a/apps/site/src/assets/styles/rocket.css
+++ b/apps/site/src/assets/styles/rocket.css
@@ -1,6 +1,7 @@
 @keyframes move-on-path {
     0% {
         offset-distance: 0%;
+        opacity: 1;
     }
     100% {
         offset-distance: 100%;
@@ -10,8 +11,10 @@
 @keyframes rocket-path {
     0% {
         stroke-dashoffset: 0;
+        opacity: 1;
     }
     100% {
         stroke-dashoffset: -16;
+        opacity: 0;
     }
 }
