feat: add Google Tag Manager integration and update script path in MetaTags

--- a/apps/site/src/components/common/MetaTags.astro
+++ b/apps/site/src/components/common/MetaTags.astro
@@ -82,4 +82,4 @@ const {
     customElements.define('google-tag', GTag);
 </script>
 
-<script type='text/partytown' src='./GoogleTagManager.js' is:inline></script>
+<script type='text/partytown' src='/GoogleTagManager.js' is:inline></script>
