--- a/apps/site/src/components/common/MetaTags.astro
+++ b/apps/site/src/components/common/MetaTags.astro
@@ -1,23 +1,15 @@
 ---
 import { SEO } from 'astro-seo';
 
-import type { MetaSEO } from 'types/metaSEO';
-import { config } from '@config.js';
+import type { metaSEO } from '@schemas/common/seoSchema';
 
-const {
-    title = config.name,
-    description = config.description,
-    canonical,
-    robots = {
-        noindex: false,
-        nofollow: false,
-    },
-    og = {
-        title: title,
-        image: config.defaultImage,
-        type: 'website',
-    },
-} = Astro.props as MetaSEO;
+import { defaultConfig, defaultSEO } from '@config';
+
+type Props = {
+    seo?: metaSEO;
+};
+
+const { seo = {} } = Astro.props as Props;
 ---
 
 <meta charset='UTF-8' />
@@ -26,40 +18,45 @@ const {
 <link rel='sitemap' href='/sitemap-index.xml' />
 
 <SEO
-    canonical={title}
-    title={''}
-    description={description}
-    noindex={robots.noindex}
-    nofollow={robots.nofollow}
-    languageAlternates={[]}
+    title={seo.title || defaultSEO.title}
+    titleTemplate={defaultSEO.titleTemplate}
+    titleDefault={defaultSEO.titleDefault}
+    description={seo.description || defaultSEO.description}
+    canonical={seo.canonical || defaultSEO.canonical}
+    nofollow={seo.robots?.nofollow || defaultSEO.robots.nofollow}
+    noindex={seo.robots?.noindex || defaultSEO.robots.noindex}
     openGraph={{
         basic: {
-            title: og.title ?? '',
-            image: og.image ?? '',
-            type: og.type ?? '',
-            url: canonical ?? '',
+            title: seo.og?.title || defaultSEO.og.title,
+            type: seo.og?.type || defaultSEO.og.type,
+            image: seo.og?.image || defaultSEO.og.image,
         },
         optional: {
-            description: 'description',
-            locale: 'locale',
-            siteName: 'siteName',
-        },
-        image: {
-            url: 'image',
-            alt: 'title',
+            description: seo.og?.description || defaultSEO.og.description,
         },
     }}
 />
+<!-- languageAlternates -->
+<!-- openGraph.optional.localeAlternate-->
+<!-- openGraph.optional.video -->
+<!-- article: {
+    publishedTime: new Date().toISOString(),
+    modifiedTime: new Date().toISOString(),
+    expirationTime: new Date().toISOString(),
+    authors: [config.author],
+    section: 'blog',
+    tags: ['astro', 'blog'],
+}, -->
 
 <!-- Google Site Verification -->
-<meta name='google-site-verification' content={config.googleSiteVerificationId} />
+<meta name='google-site-verification' content={defaultConfig.googleSiteVerificationId} />
 
 <!-- Google Tag Manager -->
-<google-tag data-gtag={config.googleTagId}></google-tag>
+<google-tag data-gtag={defaultConfig.googleTagId}></google-tag>
 
 <noscript>
     <iframe
-        src={'https://www.googletagmanager.com/ns.html?id=' + config.googleTagId}
+        src={'https://www.googletagmanager.com/ns.html?id=' + defaultConfig.googleTagId}
         height='0'
         width='0'
         style='display:none;visibility:hidden;'
