--- a/apps/site/src/pages/index.astro
+++ b/apps/site/src/pages/index.astro
@@ -1,24 +1,12 @@
 ---
 import Layout from '@layouts/PageLayout.astro';
-
-import type { MetaSEO } from 'types/metaSEO';
-import { config } from '@config.js';
-
 import { Hero, Products, Team, Contact } from '@widgets/Home/Home.astro';
-import { Star } from '@icons/Brand';
 import MagicStar from '@common/SpaceMagic/MagicStar';
 
-const meta: MetaSEO = {
-    title: config.title,
-    description: config.description,
-    canonical: Astro.url.toString(),
-    og: {
-        type: 'website',
-    },
-};
+const title = 'Início';
 ---
 
-<Layout {meta}>
+<Layout seo={{ title }}>
     <Hero />
     <div class='relative flex flex-col bg-surface-bright z-10'>
         <section class='flex flex-col w-full md:sticky top-0 pt-12 md:py-24'>
